Kaggle Notebook | Trainable Base Layer 1 | Version 3

--- a/trainable-base-layer-1.ipynb
+++ b/trainable-base-layer-1.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a11ec590",
+   "id": "6eef26ba",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-03-09T01:14:10.490298Z",
-     "iopub.status.busy": "2025-03-09T01:14:10.490094Z",
-     "iopub.status.idle": "2025-03-09T01:14:23.680941Z",
-     "shell.execute_reply": "2025-03-09T01:14:23.679969Z"
+     "iopub.execute_input": "2025-03-09T01:15:49.718567Z",
+     "iopub.status.busy": "2025-03-09T01:15:49.718341Z",
+     "iopub.status.idle": "2025-03-09T01:16:03.050263Z",
+     "shell.execute_reply": "2025-03-09T01:16:03.049569Z"
     },
     "papermill": {
-     "duration": 13.195901,
-     "end_time": "2025-03-09T01:14:23.683103",
+     "duration": 13.336558,
+     "end_time": "2025-03-09T01:16:03.051806",
      "exception": false,
-     "start_time": "2025-03-09T01:14:10.487202",
+     "start_time": "2025-03-09T01:15:49.715248",
      "status": "completed"
     },
     "tags": []
@@ -48,19 +48,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "39646a8c",
+   "id": "4a3e2dfe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-09T01:14:23.688338Z",
-     "iopub.status.busy": "2025-03-09T01:14:23.687844Z",
-     "iopub.status.idle": "2025-03-09T01:14:23.691559Z",
-     "shell.execute_reply": "2025-03-09T01:14:23.690949Z"
+     "iopub.execute_input": "2025-03-09T01:16:03.056997Z",
+     "iopub.status.busy": "2025-03-09T01:16:03.056526Z",
+     "iopub.status.idle": "2025-03-09T01:16:03.060129Z",
+     "shell.execute_reply": "2025-03-09T01:16:03.059516Z"
     },
     "papermill": {
-     "duration": 0.007128,
-     "end_time": "2025-03-09T01:14:23.692719",
+     "duration": 0.007181,
+     "end_time": "2025-03-09T01:16:03.061425",
      "exception": false,
-     "start_time": "2025-03-09T01:14:23.685591",
+     "start_time": "2025-03-09T01:16:03.054244",
      "status": "completed"
     },
     "tags": []
@@ -76,19 +76,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a234c138",
+   "id": "5e07f247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-09T01:14:23.697280Z",
-     "iopub.status.busy": "2025-03-09T01:14:23.697064Z",
-     "iopub.status.idle": "2025-03-09T01:14:28.368021Z",
-     "shell.execute_reply": "2025-03-09T01:14:28.367314Z"
+     "iopub.execute_input": "2025-03-09T01:16:03.065726Z",
+     "iopub.status.busy": "2025-03-09T01:16:03.065486Z",
+     "iopub.status.idle": "2025-03-09T01:16:08.009314Z",
+     "shell.execute_reply": "2025-03-09T01:16:08.008548Z"
     },
     "papermill": {
-     "duration": 4.6752,
-     "end_time": "2025-03-09T01:14:28.369711",
+     "duration": 4.947391,
+     "end_time": "2025-03-09T01:16:08.010644",
      "exception": false,
-     "start_time": "2025-03-09T01:14:23.694511",
+     "start_time": "2025-03-09T01:16:03.063253",
      "status": "completed"
     },
     "tags": []
@@ -144,19 +144,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a0f72dc",
+   "id": "8a7260b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-09T01:14:28.374570Z",
-     "iopub.status.busy": "2025-03-09T01:14:28.374350Z",
-     "iopub.status.idle": "2025-03-09T01:14:28.378985Z",
-     "shell.execute_reply": "2025-03-09T01:14:28.378117Z"
+     "iopub.execute_input": "2025-03-09T01:16:08.015924Z",
+     "iopub.status.busy": "2025-03-09T01:16:08.015691Z",
+     "iopub.status.idle": "2025-03-09T01:16:08.020311Z",
+     "shell.execute_reply": "2025-03-09T01:16:08.019663Z"
     },
     "papermill": {
-     "duration": 0.008368,
-     "end_time": "2025-03-09T01:14:28.380211",
+     "duration": 0.008492,
+     "end_time": "2025-03-09T01:16:08.021421",
      "exception": false,
-     "start_time": "2025-03-09T01:14:28.371843",
+     "start_time": "2025-03-09T01:16:08.012929",
      "status": "completed"
     },
     "tags": []
@@ -183,19 +183,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "019a7138",
+   "id": "a04db782",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-09T01:14:28.384575Z",
-     "iopub.status.busy": "2025-03-09T01:14:28.384376Z",
-     "iopub.status.idle": "2025-03-09T01:14:28.388776Z",
-     "shell.execute_reply": "2025-03-09T01:14:28.388190Z"
+     "iopub.execute_input": "2025-03-09T01:16:08.026507Z",
+     "iopub.status.busy": "2025-03-09T01:16:08.026252Z",
+     "iopub.status.idle": "2025-03-09T01:16:08.031303Z",
+     "shell.execute_reply": "2025-03-09T01:16:08.030670Z"
     },
     "papermill": {
-     "duration": 0.008001,
-     "end_time": "2025-03-09T01:14:28.390083",
+     "duration": 0.008978,
+     "end_time": "2025-03-09T01:16:08.032500",
      "exception": false,
-     "start_time": "2025-03-09T01:14:28.382082",
+     "start_time": "2025-03-09T01:16:08.023522",
      "status": "completed"
     },
     "tags": []
@@ -231,19 +231,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0f2ead8c",
+   "id": "951497ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-09T01:14:28.394343Z",
-     "iopub.status.busy": "2025-03-09T01:14:28.394153Z",
-     "iopub.status.idle": "2025-03-09T01:14:28.397364Z",
-     "shell.execute_reply": "2025-03-09T01:14:28.396709Z"
+     "iopub.execute_input": "2025-03-09T01:16:08.037492Z",
+     "iopub.status.busy": "2025-03-09T01:16:08.037285Z",
+     "iopub.status.idle": "2025-03-09T01:16:08.040904Z",
+     "shell.execute_reply": "2025-03-09T01:16:08.040058Z"
     },
     "papermill": {
-     "duration": 0.00655,
-     "end_time": "2025-03-09T01:14:28.398479",
+     "duration": 0.007416,
+     "end_time": "2025-03-09T01:16:08.042132",
      "exception": false,
-     "start_time": "2025-03-09T01:14:28.391929",
+     "start_time": "2025-03-09T01:16:08.034716",
      "status": "completed"
     },
     "tags": []
@@ -259,19 +259,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "28beacb9",
+   "id": "22e5f8c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-09T01:14:28.402842Z",
-     "iopub.status.busy": "2025-03-09T01:14:28.402640Z",
-     "iopub.status.idle": "2025-03-09T01:14:32.173913Z",
-     "shell.execute_reply": "2025-03-09T01:14:32.172841Z"
+     "iopub.execute_input": "2025-03-09T01:16:08.047244Z",
+     "iopub.status.busy": "2025-03-09T01:16:08.047019Z",
+     "iopub.status.idle": "2025-03-09T01:16:11.939587Z",
+     "shell.execute_reply": "2025-03-09T01:16:11.938632Z"
     },
     "papermill": {
-     "duration": 3.775605,
-     "end_time": "2025-03-09T01:14:32.175970",
+     "duration": 3.896884,
+     "end_time": "2025-03-09T01:16:11.941158",
      "exception": false,
-     "start_time": "2025-03-09T01:14:28.400365",
+     "start_time": "2025-03-09T01:16:08.044274",
      "status": "completed"
     },
     "tags": []
@@ -309,6 +309,104 @@
     "    restore_best_weights=True,  \n",
     "    verbose=1\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4732955c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-03-09T01:16:11.946953Z",
+     "iopub.status.busy": "2025-03-09T01:16:11.946686Z",
+     "iopub.status.idle": "2025-03-09T01:33:11.552554Z",
+     "shell.execute_reply": "2025-03-09T01:33:11.551706Z"
+    },
+    "papermill": {
+     "duration": 1019.610129,
+     "end_time": "2025-03-09T01:33:11.553979",
+     "exception": false,
+     "start_time": "2025-03-09T01:16:11.943850",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 477ms/step - accuracy: 0.8186 - loss: 0.4047\n",
+      "Epoch 1: val_accuracy improved from -inf to 0.79316, saving model to /kaggle/working/best_weights.weights.h5\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m113s\u001b[0m 643ms/step - accuracy: 0.8187 - loss: 0.4047 - val_accuracy: 0.7932 - val_loss: 0.4477\n",
+      "Epoch 2/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 364ms/step - accuracy: 0.8247 - loss: 0.3825\n",
+      "Epoch 2: val_accuracy did not improve from 0.79316\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m75s\u001b[0m 463ms/step - accuracy: 0.8247 - loss: 0.3826 - val_accuracy: 0.7744 - val_loss: 0.5045\n",
+      "Epoch 3/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 363ms/step - accuracy: 0.8187 - loss: 0.4010\n",
+      "Epoch 3: val_accuracy improved from 0.79316 to 0.80456, saving model to /kaggle/working/best_weights.weights.h5\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m75s\u001b[0m 465ms/step - accuracy: 0.8188 - loss: 0.4009 - val_accuracy: 0.8046 - val_loss: 0.3981\n",
+      "Epoch 4/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 364ms/step - accuracy: 0.8308 - loss: 0.3749\n",
+      "Epoch 4: val_accuracy did not improve from 0.80456\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m74s\u001b[0m 463ms/step - accuracy: 0.8309 - loss: 0.3748 - val_accuracy: 0.7989 - val_loss: 0.4382\n",
+      "Epoch 5/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 360ms/step - accuracy: 0.8500 - loss: 0.3449\n",
+      "Epoch 5: val_accuracy improved from 0.80456 to 0.81189, saving model to /kaggle/working/best_weights.weights.h5\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m74s\u001b[0m 461ms/step - accuracy: 0.8498 - loss: 0.3452 - val_accuracy: 0.8119 - val_loss: 0.3987\n",
+      "Epoch 6/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 363ms/step - accuracy: 0.8319 - loss: 0.3742\n",
+      "Epoch 6: val_accuracy improved from 0.81189 to 0.82003, saving model to /kaggle/working/best_weights.weights.h5\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m74s\u001b[0m 462ms/step - accuracy: 0.8320 - loss: 0.3740 - val_accuracy: 0.8200 - val_loss: 0.4231\n",
+      "Epoch 7/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 363ms/step - accuracy: 0.8535 - loss: 0.3515\n",
+      "Epoch 7: val_accuracy did not improve from 0.82003\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m74s\u001b[0m 460ms/step - accuracy: 0.8533 - loss: 0.3517 - val_accuracy: 0.8160 - val_loss: 0.4207\n",
+      "Epoch 8/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 361ms/step - accuracy: 0.8433 - loss: 0.3520\n",
+      "Epoch 8: val_accuracy did not improve from 0.82003\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m73s\u001b[0m 456ms/step - accuracy: 0.8432 - loss: 0.3521 - val_accuracy: 0.8005 - val_loss: 0.4275\n",
+      "Epoch 9/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 360ms/step - accuracy: 0.8428 - loss: 0.3545\n",
+      "Epoch 9: val_accuracy improved from 0.82003 to 0.82248, saving model to /kaggle/working/best_weights.weights.h5\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m73s\u001b[0m 457ms/step - accuracy: 0.8428 - loss: 0.3546 - val_accuracy: 0.8225 - val_loss: 0.4004\n",
+      "Epoch 10/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 362ms/step - accuracy: 0.8561 - loss: 0.3411\n",
+      "Epoch 10: val_accuracy improved from 0.82248 to 0.82492, saving model to /kaggle/working/best_weights.weights.h5\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m74s\u001b[0m 463ms/step - accuracy: 0.8559 - loss: 0.3412 - val_accuracy: 0.8249 - val_loss: 0.4260\n",
+      "Epoch 11/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 361ms/step - accuracy: 0.8425 - loss: 0.3421\n",
+      "Epoch 11: val_accuracy did not improve from 0.82492\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m73s\u001b[0m 456ms/step - accuracy: 0.8426 - loss: 0.3421 - val_accuracy: 0.8143 - val_loss: 0.4154\n",
+      "Epoch 12/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 361ms/step - accuracy: 0.8405 - loss: 0.3561\n",
+      "Epoch 12: val_accuracy did not improve from 0.82492\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m74s\u001b[0m 458ms/step - accuracy: 0.8405 - loss: 0.3560 - val_accuracy: 0.8119 - val_loss: 0.4468\n",
+      "Epoch 13/100\n",
+      "\u001b[1m153/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 359ms/step - accuracy: 0.8503 - loss: 0.3366\n",
+      "Epoch 13: val_accuracy did not improve from 0.82492\n",
+      "\u001b[1m154/154\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m73s\u001b[0m 455ms/step - accuracy: 0.8503 - loss: 0.3366 - val_accuracy: 0.8013 - val_loss: 0.4775\n",
+      "Epoch 13: early stopping\n",
+      "Restoring model weights from the end of the best epoch: 3.\n",
+      "\u001b[1m38/38\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 375ms/step - accuracy: 0.8307 - loss: 0.3942\n",
+      "Test Accuracy Before Fine-tuning: 82.65%\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(\n",
+    "    train_generator,\n",
+    "    epochs=EPOCHS,\n",
+    "    validation_data=validation_generator,\n",
+    "    callbacks=[checkpoint_callback, early_stopping_callback, ClearMemory()]\n",
+    ")\n",
+    "\n",
+    "initial_test_loss, initial_test_acc = model.evaluate(validation_generator, \n",
+    "                                                     steps=validation_generator.samples // BATCH_SIZE)\n",
+    "\n",
+    "print(f\"Test Accuracy Before Fine-tuning: {initial_test_acc*100:.2f}%\")"
    ]
   }
  ],
@@ -350,14 +448,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 26.748814,
-   "end_time": "2025-03-09T01:14:34.700384",
+   "duration": 1047.116402,
+   "end_time": "2025-03-09T01:33:14.340645",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-03-09T01:14:07.951570",
+   "start_time": "2025-03-09T01:15:47.224243",
    "version": "2.6.0"
   }
  },
